--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "joi": "^17.13.3",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.9"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
